tests/samples/negative/generics/generic_function_array_param_storage.ax
module generic_function_array_param_storage;

fn bad<T>(value: [2]T) -> i32 {
    return 0;
}

fn main() -> i32 {
    var value: *mut [2]i32 = null;
    return bad<i32>(*value);
}
